My App Portfolio

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
     <Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/meda_streamer"
+        android:text="@string/media_streamer"
         android:id="@+id/button"
         android:layout_marginTop="35dp"
         android:layout_below="@+id/textView"
